--- a/Cadfunc.form
+++ b/Cadfunc.form
@@ -126,6 +126,7 @@
           <Events>
             <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtcadfuncnomeFocusGained"/>
             <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtcadfuncnomeFocusLost"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtcadfuncnomeKeyPressed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jlcadfunccargo">
@@ -137,6 +138,7 @@
           <Events>
             <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtcadfunccargoFocusGained"/>
             <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtcadfunccargoFocusLost"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtcadfunccargoKeyPressed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jlcadfuncsal">
@@ -148,6 +150,7 @@
           <Events>
             <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtcadfuncsalFocusGained"/>
             <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtcadfuncsalFocusLost"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtcadfuncsalKeyPressed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="bntcadastrar">
